# Hexapod_rl

./: README.md
Hexapod/: CMakeLists.txt
Hexapod/launch/: display.launch.py  gazebo.launch.py
Hexapod/urdf/: Hexapod.urdf
hexapod/: Hexapod.urdf  HexapodBulletEnv.py  RobotTesting.py  RobotTraining.py  TripodWalking.py  package.xml
hexapod/launch/: display.launch.py  gazebo.launch.py
hexapod/tmp/PPO_1/: events.out.tfevents.1738580861.datvu-G7-KE.95380.0
hexapod/tmp/PPO_2/: events.out.tfevents.1738611478.datvu-G7-KE.95380.1
hexapod/tmp/PPO_3/: events.out.tfevents.1738754320.datvu-G7-KE.4868.0
hexapod/tmp/PPO_4/: events.out.tfevents.1738755886.datvu-G7-KE.4868.1
hexapod/trained_models/test_1/: data  policy.optimizer.pth  policy.pth  system_info.txt
hexapod/urdf/: Hexapod.urdf  Hexapod1.urdf
